--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "test": "echo \"No tests specified for now, building and deploying...\"" // Ubah ini
+  "start": "node server.js" // Atau script lain jika ada, tapi "test"nya sudah hilang
   },
   "keywords": [],
   "author": "",
