--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "credit-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Node.js Express API for credit management",
+  "main": "server.js",
   "scripts": {
-  "start": "node server.js" // Atau script lain jika ada, tapi "test"nya sudah hilang
+    "start": "node server.js"
+    // Baris "test" yang lama seharusnya TIDAK ADA di sini lagi
+    // Contoh yang lama: "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "express": "^5.1.0"
+    "express": "^4.19.2",
+    "body-parser": "^1.20.2"
+    // Pastikan versi sesuai dengan yang Anda install.
+    // Mongoose belum diperlukan di fase ini, jadi jangan ada dulu jika belum sampai fase database online.
   }
 }
